@@ -1,7 +1,0 @@
-|biohazard|   
-
-.. image:: images/biohazard.png 
-   :width: 50%                  
-
-.. |biohazard| image:: images/biohazard.png
-   :width: 50%
