@@ -6,6 +6,7 @@ bad_md5 = [
 ]
 
 good_md5 = [
+        '6754e965bab1860e8bbab7300deff75d',
         'c901fcf3e609421368e92cdcbd4124a7',
         'sentinel'
 ]
