@@ -5,6 +5,7 @@ bad_md5 = [
 
 good_md5 = [
         '695db00f6942d31d888f2d978db50a15',
+        '7b64f87cdb240e673bdbfc7582bf8b55',
         'sentinel'
 ]
 
